test/fails/bad_generics/infer3.lgl
int id_int(int x) {
    return x;
}

t restrict<t>(t x) {
    return id_int(x);
}

void main() {
    print restrict(true);
}